fix: sidebar perform unexpectedly on mobile

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -132,6 +132,7 @@ body {
             flex-direction: column;
 
             > div {
+                max-width: 100% !important;
                 width: 100% !important;
             }
         });
